--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <br><a class="navbar-brand" href="index.html"><img src="Images/29956627.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
-    <font color="#ff724c">FRANKDU.CO</font>
+    <font color="#ff724c">My Netlify Website</font>
   </a></br>
 
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
