Hello changed again

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </nav>
 </div>
 
-    <center><font color="#ff724c"><h1 id="name" >Frank H.J. Du</h1></font></center>
+    <center><font color="#ff724c"><h1 id="name" >Frank Du</h1></font></center>
 
     <div class="h4">
 
